--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
         <link rel="stylesheet" href="css/styles.css">
 
 
-        <!--Preload first carousel image-->
+        <!--Preload first, second and thirds carousel image-->
         <link rel="preload" as="image" href="/assets/img/groupPhoto2.webp">
+        <link rel="preload" as="image" href="/assets/img/carousel/updatedCarouselImage2.webp">
+        <link rel="preload" as="image" href="/assets/img/carousel/carouselImage4.webp">
+        
 
         <!--Emailjs script-->
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
@@ -68,30 +71,38 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="./assets/img/groupPhoto2.webp" 
-                            loading="eagerly" class="d-block img-fluid opacity-75" 
+                            loading="eager" class="d-block img-fluid opacity-75" 
                             alt="Slide 1 photo is of 3 men in black leather jackets with sunglasses on standing infront of a brick wall">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedCarouselImage2.webp" loading="lazy" class="d-block img-fluid" alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
+                            <img src="./assets/img/carousel/updatedCarouselImage2.webp" class="d-block img-fluid" 
+                            loading="eager"
+                            alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" alt="Slide 3 man playing guitar">
+                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" 
+                            alt="Slide 3 man playing guitar">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 4 men standing in front of bulding">
+                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" 
+                            alt="Slide 4 men standing in front of bulding">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/CarouselImg3.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 5 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
+                            <img src="./assets/img/carousel/CarouselImg3.webp" loading="lazy" class="d-block  img-fluid" 
+                            alt="Slide 5 man is sitting behind the drumb set pointing his finder at the camera with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" alt="Slide 6 3 men standing infron of brick building">
+                            <img src="./assets/img/carousel/fixedCarouselImage.webp" loading="lazy" class="d-block  img-fluid" 
+                            alt="Slide 6 3 men standing infron of brick building">
                             </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/UpdatedCarouselImage5.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 7, group of band members all sitting on stools in front of a rustic color background">  
+                            <img src="./assets/img/carousel/UpdatedCarouselImage5.webp" loading="lazy" class="d-block w-100 img-fluid" 
+                            alt="Slide 7, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
 
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedGroupPhoto3.webp" loading="lazy" class="d-block w-100 img-fluid" alt="Slide 8, group of band members all sitting on stools in front of a rustic color background">  
+                            <img src="./assets/img/carousel/updatedGroupPhoto3.webp" loading="lazy" class="d-block w-100 img-fluid" 
+                            alt="Slide 8, group of band members all sitting on stools in front of a rustic color background">  
                         </div>
                        
                     </div>
@@ -246,7 +257,7 @@
 
         <!--Footer-->
         <footer class="bg-dark text-white text-center py-3" id="footer">
-            <p>&copy; 2024 LongTooth | <a href="#" class="text-white">Privacy Policy</a></p>
+            <p>&copy; 2025 LongTooth | <a href="#" class="text-white">Privacy Policy</a></p>
           </footer>
 
             <!--Bootstrap JS files-->
