--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                             alt="Slide 2 man with long hair playing the bass infront of microphone with purple back lighting">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/carouselImage4.webp" loading="lazy" class="d-block img-fluid" 
+                            <img src="./assets/img/carousel/carouselImage4.webp" loading="eager" class="d-block img-fluid" 
                             alt="Slide 3 man playing guitar">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/updatedGroupImae5.webp" loading="lazy" class="d-block  img-fluid" 
+                            <img src="./assets/img/carousel/updatedGroupImae5.webp" class="d-block  img-fluid" 
                             alt="Slide 4 men standing in front of bulding">
                         </div>
                         <div class="carousel-item">
@@ -151,7 +151,7 @@
                         </div>   
                         <!-- Waveform -->
                          <div id="waveform1" class="waveform"></div>
-                         <div id="trackTitle">Bleed for You</div> <!-- Default title -->
+                         <div id="trackTitle">Half Step From Heaven</div> <!-- Default title -->
                           <!-- Controls -->
                          <div class="controls">
                         <button id="prevTrack" alt="backward button"><i class="bi bi-skip-backward-fill"></i></button>
@@ -164,7 +164,7 @@
             <!--About Section-->
             <section class="container py-3" id="aboutSection"> 
                 <h1>Meet the Band</h1>
-                <p>Located in Rochester NY, Long Tooth is a Metal band that was formed in 1997 by lead singer Jack Burnett <br> and bass player Paul Van San.</p>
+                <p>Located in Rochester NY, Longtooth is a Metal band that was formed in 1997 by lead singer Jack Burnett <br> and bass player Paul Van Sant.</p>
                
                 <div class="container d-flex justify-content-center align-items-center" id="bandMemberContainer">
                     <div class="row"> 
@@ -200,7 +200,7 @@
                              <p class="preview-bio">Paul plays bass guitar for longtooth. 
                                 Paul started playing the upstate New york thruway circuit in 1984 and has played with Rochester 
                                 legend SCORCHER.</p>
-                             <p class="full-bio" >His talent has reached many cities and locations, even bringing him to the Hollywood strip music scene where he played at iconic places and people.  
+                             <p class="full-bio" >His talent has reached many cities and locations, even bringing him to the Sunset strip music scene where he played at iconic places and people.  
                                 Paul is the energy of the band with his commanding stage presence and his earth shaking bass chord.</p>
                              <button class="btn btn-outline-primary toggle-bio">Read More</button>
                             </div>
@@ -216,7 +216,7 @@
                             <p class="bandMember-name"><strong>AJ Secash</strong></p>
                             <p>Drummer</p>
                             <div class="bio-container">
-                            <p class="preview-bio"> Aj is the drummer and percussionist For longtooth. 
+                            <p class="preview-bio"> AJ is the drummer and percussionist For longtooth. 
                                 Aj has Played a variety of different projects and collaborations all over Rochester.</p>
                             <p class="full-bio">He joined Longtooth in early 2024 and has not looked back saying that this is one of his favorite yet challenging projects that he has been involved with. 
                                  Aj is the vision of the band knowing now with the energy and talent of the group the sky's the limit. </p>
