Updated player buttons

--- a/index.html
+++ b/index.html
@@ -153,10 +153,21 @@
                          <div id="waveform1" class="waveform"></div>
                          <div id="trackTitle">Half Step From Heaven</div> <!-- Default title -->
                           <!-- Controls -->
-                         <div class="controls">
-                        <button id="prevTrack" alt="backward button"><i class="bi bi-skip-backward-fill"></i></button>
-                         <button id="playPause1" alt="play button"><i class="bi bi-play-fill"></i></button>
-                        <button id="nextTrack" alt="next track button"><i class="bi bi-skip-forward-fill"></i></button>
+                         <div class="controls d-flex justify-content-center align-items-center">
+                            <div  class="text-center mx-2">
+                                <button id="prevTrack" alt="backward button"><i class="bi bi-skip-backward-fill"></i></button>
+                                <span class="d-block text-white">Previous</span>
+                            </div>
+                       <div class="text-center mx-2">
+                        <button id="playPause1" alt="play button"><i class="bi bi-play-fill"></i></button>
+                        <span class="d-block text-white">Play</span>
+
+                       </div>
+                        <div class="text-center mx-2">
+                            <button id="nextTrack" alt="next track button"><i class="bi bi-skip-forward-fill"></i></button>
+                            <span class="d-block text-white">Next</span>
+                        </div>
+                        
                         </div>
                     </div>      
             </div>     
@@ -197,7 +208,7 @@
                              <p class="bandMember-name"> <strong>Paul Van Sant</strong></p>
                              <p>Bass Player</p>
                              <div class="bio-container">
-                             <p class="preview-bio">Paul plays bass guitar for longtooth. 
+                             <p class="preview-bio">Paul plays bass guitar for Longtooth. 
                                 Paul started playing the upstate New york thruway circuit in 1984 and has played with Rochester 
                                 legend SCORCHER.</p>
                              <p class="full-bio" >His talent has reached many cities and locations, even bringing him to the Sunset strip music scene where he played at iconic places and people.  
