added phone numbers

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                     </div>
                      <div class="gigs-contact col-md-4 col-sm-6">
                         <h1 >Want to book us?</h1>
-                            <p>Tel: 585-993-7272</p>
+                        <a style="color: white;">AJ: 585-993-7272</a> <br>
+                        <a style="color: white;">Paul: 585-360-6230</a>
                             <div class="contact-btn">
                             <button type="button" class="btn btn-outline-primary" alt="contact button"><a href="#contact-form">Email Us</a></button>
                         </div>
@@ -246,7 +247,8 @@
             <section class="contactSection">
                 <form id="contact-form">
                     <h1 style="color: whitesmoke;">Contact Us</h1>
-                    <p>Tel: 585-993-7272</p>
+                    <a style="color: white;">AJ: 585-993-7272</a> <br>
+                    <a style="color: white;">Paul: 585-360-6230</a>
                 <div class="mb-3">
                     <label for="FormControlInput1" class="form-label" style="color: whitesmoke;">Full Name</label>
                     <input type="text" class="form-control" id="fullName" placeholder="Enter first and last name" required>
